--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+  <div class="container">
  
     <title>Greens Kiosk</title>
  <h1 id="title">Welcome to Greens Kiosk</h1>
@@ -25,7 +26,7 @@
 
  </ul>
 
- <h3 id="upper">Vegetables</h3>
+ <h3 id="ase">Vegetables</h3>
 
  <ul id="vegList">
 
@@ -36,6 +37,7 @@
  <li>Kales</li>
  </ul>
  <script src="index.js"></script>
+ </div>
     
 </body>
 </html>
