--- a/index.html
+++ b/index.html
@@ -19,24 +19,42 @@
  <ul id="fruitList">
 
  <li>Mangoes</li>
+ <img src="images/mangoes.jpeg" id="mango">
+ <br>
 
  <li>Bananas</li>
+ <img src="images/banana.jpeg" id="banana">
+ <br>
 
- <li>Water Melons</li>
+ <li>Water Melons</li><br>
+ <img src="images/water.jpg" id="water">
 
  </ul>
+ <br>
+ <img src="images/pineaple.jpeg" id="pineaple">
 
  <h3 id="ase">Vegetables</h3>
 
  <ul id="vegList">
+  <br>
 
  <li>Onions</li>
+ <img src="images/onion2.jpeg" id="onion">
+ <br>
 
  <li>Tomatoes</li>
+ <img src="images/tomato2.jpeg" id="tomato">
+ <br>
 
  <li>Kales</li>
+ <img src="images/kale2.webp" id="kale">
+ <br>
+  <img src="images/mustard.jpeg" id="mustard">
  </ul>
+
  <script src="index.js"></script>
+
+ <img src="images/mixture.jpg" id="mix">
  </div>
     
 </body>
