--- a/index.html
+++ b/index.html
@@ -51,11 +51,12 @@
  <br>
   <img src="images/mustard.jpeg" id="mustard">
  </ul>
+ <br>
 
- <script src="index.js"></script>
+ <!-- <script src="index.js"></script> -->
 
  <img src="images/mixture.jpg" id="mix">
  </div>
-    
+<script src="index.js"></script>
 </body>
 </html>
